--- a/MyFlyingSchmup/Config/DefaultEngine.ini
+++ b/MyFlyingSchmup/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/Week7.Week7
+EditorStartupMap=/Game/Levels/Week7.Week7
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
